--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
-        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.3.5")
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.5"
 
     }
 }
